miniJavaPrettyPrinter/MiniJavaPrettyPrinter.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaPrettyPrinter.java */
import java.io.*;

public class MiniJavaPrettyPrinter implements MiniJavaPrettyPrinterConstants {
    public static void main(String args[]) {
        System.out.println("Reading from standard input...");
        MiniJavaPrettyPrinter parser = new MiniJavaPrettyPrinter(System.in);
        try {
            parser.Start(0);
            System.out.println("Thank you.");
        } catch (ParseException e) {
            System.out.println("Oops.");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }

  static final public void Start(int indent) throws ParseException {
    Program(indent);
  }

  /*
   * Grammar rules and pretty printing
   */
  static final public void Program(int indent) throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      ClassDeclaration(indent);
    }
  }

  static final public void ClassDeclaration(int indent) throws ParseException {
    jj_consume_token(CLASS);
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EXTENDS:
      jj_consume_token(EXTENDS);
      jj_consume_token(ID);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    jj_consume_token(LBRACE);
        for (int i = 0; i < indent; i++) System.out.print("    ");
        System.out.println("class " + token.image + " {");
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case STRING:
      case BOOLEAN:
      case INT:
      case ID:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      VarDeclaration(indent + 1);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      MethodDeclaration(indent + 1);
    }
    jj_consume_token(RBRACE);
        for (int i = 0; i < indent; i++) System.out.print("    ");
        System.out.println("}");
  }

  static final public void VarDeclaration(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case STRING:
    case BOOLEAN:
    case INT:
      Type(indent);
      break;
    case ID:
      jj_consume_token(ID);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      jj_consume_token(RBRACKET);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQUAL:
      jj_consume_token(EQUAL);
      Exp(indent);
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
  }

  static final public void MethodDeclaration(int indent) throws ParseException {
    jj_consume_token(PUBLIC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STATIC:
      jj_consume_token(STATIC);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    Type(indent);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      break;
    case MAIN:
      jj_consume_token(MAIN);
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VOID:
    case STRING:
    case BOOLEAN:
    case INT:
      Type(indent);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACKET:
        jj_consume_token(LBRACKET);
        jj_consume_token(RBRACKET);
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(ID);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        Type(indent);
        jj_consume_token(ID);
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case STRING:
      case BOOLEAN:
      case INT:
      case IF:
      case WHILE:
      case PRINT:
      case THIS:
      case ID:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_5;
      }
      Statement(indent);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      jj_consume_token(RETURN);
      Exp(indent);
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
  }

  static final public void Type(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
      break;
    case BOOLEAN:
      jj_consume_token(BOOLEAN);
      break;
    case VOID:
      jj_consume_token(VOID);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Statement(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      IfStatement(indent);
      break;
    case WHILE:
      WhileStatement(indent);
      break;
    case PRINT:
      PrintStatement(indent);
      break;
    default:
      jj_la1[15] = jj_gen;
      if (jj_2_1(4)) {
        VarDeclaration(indent);
      } else if (jj_2_2(4)) {
        AssignmentStatement(indent);
      } else if (jj_2_3(4)) {
        ClassInstantiation(indent);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case STRING:
        case BOOLEAN:
        case INT:
          ArrayDeclaration(indent);
          break;
        case ID:
          MethodCall(indent);
          break;
        default:
          jj_la1[16] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void IfStatement(int indent) throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    Exp(indent);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case STRING:
      case BOOLEAN:
      case INT:
      case IF:
      case WHILE:
      case PRINT:
      case THIS:
      case ID:
        ;
        break;
      default:
        jj_la1[17] = jj_gen;
        break label_6;
      }
      Statement(indent);
    }
    jj_consume_token(RBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      jj_consume_token(LBRACE);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
        case STRING:
        case BOOLEAN:
        case INT:
        case IF:
        case WHILE:
        case PRINT:
        case THIS:
        case ID:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_7;
        }
        Statement(indent);
      }
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[19] = jj_gen;
      ;
    }
  }

  static final public void WhileStatement(int indent) throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    Exp(indent);
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
      case STRING:
      case BOOLEAN:
      case INT:
      case IF:
      case WHILE:
      case PRINT:
      case THIS:
      case ID:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_8;
      }
      Statement(indent);
    }
    jj_consume_token(RBRACE);
  }

  static final public void PrintStatement(int indent) throws ParseException {
    jj_consume_token(PRINT);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING_LITERAL:
      jj_consume_token(STRING_LITERAL);
      break;
    case NEW:
    case LPAREN:
    case NUMBER:
    case TRUE:
    case FALSE:
    case THIS:
    case NOT:
    case ID:
      Exp(indent);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  static final public void AssignmentStatement(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      jj_consume_token(ID);
      AssignmentStatementA(indent);
      break;
    case THIS:
      jj_consume_token(THIS);
      jj_consume_token(DOT);
      jj_consume_token(ID);
      jj_consume_token(EQUAL);
      Exp16(indent);
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void AssignmentStatementA(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      Exp(indent);
      jj_consume_token(RBRACKET);
      jj_consume_token(EQUAL);
      Exp(indent);
      jj_consume_token(SEMICOLON);
      break;
    case EQUAL:
      jj_consume_token(EQUAL);
      Exp(indent);
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void ClassInstantiation(int indent) throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(ID);
    jj_consume_token(EQUAL);
    jj_consume_token(NEW);
    jj_consume_token(ID);
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  static final public void ArrayDeclaration(int indent) throws ParseException {
    Type(indent);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    jj_consume_token(ID);
    jj_consume_token(EQUAL);
    jj_consume_token(NEW);
    Type(indent);
    jj_consume_token(LBRACKET);
    Exp(indent);
    jj_consume_token(RBRACKET);
    jj_consume_token(SEMICOLON);
  }

  static final public void MethodCall(int indent) throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(DOT);
    jj_consume_token(ID);
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case LPAREN:
    case NUMBER:
    case TRUE:
    case FALSE:
    case THIS:
    case NOT:
    case ID:
      ExpList(indent);
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
  }

  static final public void Exp(int indent) throws ParseException {
    Exp9(indent);
  }

  static final public void Exp9(int indent) throws ParseException {
    Exp10(indent);
    Exp9a(indent);
  }

  static final public void Exp9a(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      Exp10(indent);
      Exp9a(indent);
      break;
    default:
      jj_la1[25] = jj_gen;

    }
  }

  static final public void Exp10(int indent) throws ParseException {
    Exp11(indent);
    Exp10a(indent);
  }

  static final public void Exp10a(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LESS_THAN:
    case GREATER_THAN:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESS_THAN:
        jj_consume_token(LESS_THAN);
        break;
      case GREATER_THAN:
        jj_consume_token(GREATER_THAN);
        break;
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      Exp11(indent);
      Exp10a(indent);
      break;
    default:
      jj_la1[27] = jj_gen;

    }
  }

  static final public void Exp11(int indent) throws ParseException {
    Exp12(indent);
    Exp11a(indent);
  }

  static final public void Exp11a(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ADD_OP:
      jj_consume_token(ADD_OP);
      Exp12(indent);
      Exp11a(indent);
      break;
    case MINUS_OP:
      jj_consume_token(MINUS_OP);
      Exp12(indent);
      Exp11a(indent);
      break;
    default:
      jj_la1[28] = jj_gen;

    }
  }

  static final public void Exp12(int indent) throws ParseException {
    Exp13(indent);
    Exp12a(indent);
  }

  static final public void Exp12a(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULT_OP:
      jj_consume_token(MULT_OP);
      Exp13(indent);
      Exp12a(indent);
      break;
    case DIV_OP:
      jj_consume_token(DIV_OP);
      Exp13(indent);
      Exp12a(indent);
      break;
    default:
      jj_la1[29] = jj_gen;

    }
  }

  static final public void Exp13(int indent) throws ParseException {
    Exp16(indent);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NEW:
    case LBRACKET:
    case DOT:
      Exp13a(indent);
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
  }

  static final public void Exp13a(int indent) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      Exp(indent);
      jj_consume_token(RBRACKET);
      break;
    case DOT:
      jj_consume_token(DOT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LENGTH:
        jj_consume_token(LENGTH);
        break;
      default:
        jj_la1[31] = jj_gen;
        if (jj_2_4(2)) {
          jj_consume_token(ID);
          jj_consume_token(LPAREN);
          ExpList(indent);
          jj_consume_token(RPAREN);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ID:
            jj_consume_token(ID);
            break;
          default:
            jj_la1[32] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      break;
    case NEW:
      jj_consume_token(NEW);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
        jj_consume_token(INT);
        jj_consume_token(LBRACKET);
        Exp(indent);
        jj_consume_token(RBRACKET);
        break;
      case ID:
        jj_consume_token(ID);
        jj_consume_token(LPAREN);
        jj_consume_token(RPAREN);
        break;
      default:
        jj_la1[33] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[34] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void Exp16(int indent) throws ParseException {
    Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAREN:
      jj_consume_token(LPAREN);
      Exp(indent);
      jj_consume_token(RPAREN);
      break;
    case NUMBER:
      t = jj_consume_token(NUMBER);
      break;
    case ID:
      t = jj_consume_token(ID);
      break;
    case TRUE:
      t = jj_consume_token(TRUE);
      break;
    case FALSE:
      t = jj_consume_token(FALSE);
      break;
    case NOT:
      jj_consume_token(NOT);
      Exp16(indent);
      break;
    case THIS:
      jj_consume_token(THIS);
      jj_consume_token(DOT);
      jj_consume_token(ID);
      break;
    default:
      jj_la1[36] = jj_gen;
      if (jj_2_5(2)) {
        jj_consume_token(NEW);
        Type(indent);
        jj_consume_token(LBRACKET);
        Exp(indent);
        jj_consume_token(RBRACKET);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          jj_consume_token(NEW);
          jj_consume_token(ID);
          jj_consume_token(LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case NEW:
          case LPAREN:
          case NUMBER:
          case TRUE:
          case FALSE:
          case THIS:
          case NOT:
          case ID:
            ExpList(indent);
            break;
          default:
            jj_la1[35] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
          break;
        default:
          jj_la1[37] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void ExpList(int indent) throws ParseException {
    Exp(indent);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[38] = jj_gen;
        break label_9;
      }
      jj_consume_token(COMMA);
      Exp(indent);
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3R_46() {
    if (jj_scan_token(DIV_OP)) return true;
    return false;
  }

  static private boolean jj_3R_45() {
    if (jj_scan_token(MULT_OP)) return true;
    return false;
  }

  static private boolean jj_3R_40() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_45()) {
    jj_scanpos = xsp;
    if (jj_3R_46()) {
    jj_scanpos = xsp;
    if (jj_3R_47()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3R_26() {
    if (jj_3R_28()) return true;
    if (jj_3R_40()) return true;
    return false;
  }

  static private boolean jj_3R_43() {
    return false;
  }

  static private boolean jj_3R_42() {
    if (jj_scan_token(MINUS_OP)) return true;
    return false;
  }

  static private boolean jj_3R_41() {
    if (jj_scan_token(ADD_OP)) return true;
    return false;
  }

  static private boolean jj_3R_33() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_41()) {
    jj_scanpos = xsp;
    if (jj_3R_42()) {
    jj_scanpos = xsp;
    if (jj_3R_43()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_3() {
    if (jj_3R_12()) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_3R_11()) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_10()) return true;
    return false;
  }

  static private boolean jj_3R_15() {
    if (jj_scan_token(LBRACKET)) return true;
    if (jj_scan_token(RBRACKET)) return true;
    return false;
  }

  static private boolean jj_3R_25() {
    if (jj_3R_26()) return true;
    if (jj_3R_33()) return true;
    return false;
  }

  static private boolean jj_3R_35() {
    return false;
  }

  static private boolean jj_3R_29() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) return true;
    }
    return false;
  }

  static private boolean jj_3R_34() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(41)) {
    jj_scanpos = xsp;
    if (jj_scan_token(42)) return true;
    }
    return false;
  }

  static private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(15)) {
    jj_scanpos = xsp;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(8)) {
    jj_scanpos = xsp;
    if (jj_scan_token(11)) return true;
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_24() {
    if (jj_3R_25()) return true;
    if (jj_3R_29()) return true;
    return false;
  }

  static private boolean jj_3R_31() {
    return false;
  }

  static private boolean jj_3R_27() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_30()) {
    jj_scanpos = xsp;
    if (jj_3R_31()) return true;
    }
    return false;
  }

  static private boolean jj_3R_30() {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  static private boolean jj_3R_14() {
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_14()) {
    jj_scanpos = xsp;
    if (jj_scan_token(55)) return true;
    }
    xsp = jj_scanpos;
    if (jj_3R_15()) jj_scanpos = xsp;
    if (jj_scan_token(ID)) return true;
    xsp = jj_scanpos;
    if (jj_3R_16()) jj_scanpos = xsp;
    if (jj_scan_token(SEMICOLON)) return true;
    return false;
  }

  static private boolean jj_3R_21() {
    if (jj_3R_24()) return true;
    if (jj_3R_27()) return true;
    return false;
  }

  static private boolean jj_3R_39() {
    if (jj_scan_token(NEW)) return true;
    if (jj_scan_token(ID)) return true;
    return false;
  }

  static private boolean jj_3R_19() {
    if (jj_3R_21()) return true;
    return false;
  }

  static private boolean jj_3_5() {
    if (jj_scan_token(NEW)) return true;
    if (jj_3R_13()) return true;
    return false;
  }

  static private boolean jj_3_4() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_38() {
    if (jj_scan_token(THIS)) return true;
    if (jj_scan_token(DOT)) return true;
    return false;
  }

  static private boolean jj_3R_37() {
    if (jj_scan_token(NOT)) return true;
    if (jj_3R_32()) return true;
    return false;
  }

  static private boolean jj_3R_44() {
    if (jj_3R_48()) return true;
    return false;
  }

  static private boolean jj_3R_36() {
    if (jj_scan_token(LPAREN)) return true;
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_32() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_36()) {
    jj_scanpos = xsp;
    if (jj_scan_token(33)) {
    jj_scanpos = xsp;
    if (jj_scan_token(55)) {
    jj_scanpos = xsp;
    if (jj_scan_token(34)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) {
    jj_scanpos = xsp;
    if (jj_3R_37()) {
    jj_scanpos = xsp;
    if (jj_3R_38()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3R_39()) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3R_12() {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(EQUAL)) return true;
    if (jj_scan_token(NEW)) return true;
    return false;
  }

  static private boolean jj_3R_51() {
    if (jj_scan_token(NEW)) return true;
    return false;
  }

  static private boolean jj_3R_50() {
    if (jj_scan_token(DOT)) return true;
    return false;
  }

  static private boolean jj_3R_49() {
    if (jj_scan_token(LBRACKET)) return true;
    return false;
  }
